# funny_faces

./: README.md  app.py  pyproject.toml  run.sh
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
service/: image_processing.py  main.py
